<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.noor.af.noortasksmanger.AddTaskActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/etText"
            android:hint="@string/tasktext"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/etPhone"
                android:hint="@string/phone"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnContacts"
                android:text="@string/contacts"
                android:layout_weight="1"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/etLocation"
                android:hint="@string/location"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnImageButton"
                android:src="@android:drawable/ic_menu_mylocation" />

        </LinearLayout>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/rtBarPriority"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/save"
            android:id="@+id/btnSave"
            android:layout_gravity="right"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>
